--- a/src/app/product/components/product-details/product-details.component.css
+++ b/src/app/product/components/product-details/product-details.component.css
@@ -1,4 +1,7 @@
 .main{
+  padding: 20px 5em 20px 5em;
+}
+.sub-main{
   display: flex;
   gap: 10px 14%;
 }
@@ -13,8 +16,40 @@ img{
 
 }
 
-@media  only screen and (max-width: 1080px) {
+@media  only screen and (max-width: 800px) {
+  .main{
+    flex-wrap: wrap-reverse;
+  }
   img{
     max-width: 300px;
+ }
+  button{
+    margin-top: 3em;
   }
+}
+@media  only screen and (min-width: 900px) {
+  .main{
+    flex-wrap: wrap-reverse;
+  }
+  img{
+    max-width: 550px;
+  }
+  button{
+    margin-top: 3.5em;
+  }
+}
+/**
+  button style
+ */
+.disable{
+  opacity: 60%;
+}
+.warn{
+  background-color: var(--mat-sys-secondary);
+  color: var(--mat-sys-tertiary-container);
+}
+
+.accent{
+  background-color: var(--mat-sys-tertiary);
+  color: var(--mat-sys-tertiary-container);
 }
