--- a/src/app/product/components/product-list/product-list.component.css
+++ b/src/app/product/components/product-list/product-list.component.css
@@ -2,8 +2,34 @@
   padding-bottom: 1.8em;
   gap: 1.2em;
 }
+ /**
+  *drawer
+  */
 
 mat-slider {
   width: 300px;
 }
 
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+
+
+
+.example-label-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 10px 0;
+  max-width: 284px;
+}
+.example-width {
+  max-width: 180px;
+  width: 100%;
+}
