--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-navbar></app-navbar>
+<app-navbar
+  [cartItemLength]="cartItemLength()!"
+  [cart]="cart()!"
+  [user]="user()!"
+  [isAuthenticated]="isAuthenticated()">
+
+</app-navbar>
 <router-outlet></router-outlet>
